Silenced some redundant output

--- a/Loggbok.ipynb
+++ b/Loggbok.ipynb
@@ -84,6 +84,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
+      "%%capture\n",
       "wins = tw.gen_all_auto_wins(spec2)\n",
       "wins = tw.gen_man_win(spec2,wins)\n",
       "\n",
