Still trying to suppres

--- a/Loggbok.ipynb
+++ b/Loggbok.ipynb
@@ -92,7 +92,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": "*"
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
