--- a/Loggbok.ipynb
+++ b/Loggbok.ipynb
@@ -329,7 +329,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "A further test is measuring how much of the spectra remains over the continium level after some smoothing has (hopefully) removed the noise that is the only component of the observed signal that can be expected to lie over the continuum level.\n",
+      "A further test is measuring how much of the spectra remains over the continium level after some smoothing has (hopefully) removed the noise that is the only component of the observed signal that can be expected to lie over the continuum level. This was done by fitting a continuum for each row using one of the windows, and then subtracting it away before rolling mean smoothing.\n",
       "\n",
       "Looking first at some examples of how it can appear (the first example has two outliers at either end that are impossible to see):"
      ]
