Renamed some plots

--- a/Worklog.ipynb
+++ b/Worklog.ipynb
@@ -77,7 +77,7 @@
       "pl.hist(spec2.ref ,301,alpha=0.5,label=\"Reference\")\n",
       "pl.hist(spec2.mean,301,alpha=0.5,label=\"Adjusted mean\")\n",
       "\n",
-      "pl.title(\"Reference and adjusted mean spectrum\")\n",
+      "pl.title(\"Reference and adjusted mean spectrum, enhanced\")\n",
       "pl.xlim(0.93,1.03)\n",
       "pl.legend(loc=\"upper left\")\n",
       "pl.show()"
@@ -121,14 +121,14 @@
       "pl.hist(spec2.spec(row1) ,301,alpha=0.3,label=\"Data row {}\".format(row1))\n",
       "pl.hist(spec2.spec(row2) ,301,alpha=0.3,label=\"Data row {}\".format(row2))\n",
       "pl.hist(spec2.spec(row3) ,301,alpha=0.3,label=\"Data row {}\".format(row3))\n",
-      "pl.title(\"Kitt peak FTS and adjusted mean spectrum\")\n",
+      "pl.title(\"Three random rows of data\")\n",
       "pl.legend(loc=\"upper left\")\n",
       "pl.show()\n",
       "\n",
       "pl.hist(spec2.spec(row1) ,301,alpha=0.3,label=\"Data row {}\".format(row1))\n",
       "pl.hist(spec2.spec(row2) ,301,alpha=0.3,label=\"Data row {}\".format(row2))\n",
       "pl.hist(spec2.spec(row3) ,301,alpha=0.3,label=\"Data row {}\".format(row3))\n",
-      "pl.title(\"Kitt peak FTS and adjusted mean spectrum\")\n",
+      "pl.title(\"Three random rows of data, enhanced\")\n",
       "pl.legend(loc=\"upper right\")\n",
       "pl.xlim(0.85,1.14)\n",
       "pl.show()"
